--- a/src/Components/EmailList.css
+++ b/src/Components/EmailList.css
@@ -3,6 +3,17 @@
     overflow: scroll;
 }
 
+
+.emailList::-webkit-scrollbar {
+    display: none;
+}
+
+
+.emailList {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
 .emailList__settings {
     position: sticky;
     top: 0;
@@ -21,4 +32,8 @@
     background-color: white;
     border-bottom: 1px solid whitesmoke;
     z-index: 999;
+}
+
+.emailList__list {
+    padding-bottom: 20px;
 }
